--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
     "is-svg": "^4.3.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-json-viewer": "^2.2.19"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
