--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.9.1",
     "is-svg": "^4.3.1",
     "nuxt": "^2.15.3",
+    "v-emoji-picker": "^2.3.3",
     "vue-json-viewer": "^2.2.19"
   },
   "devDependencies": {
