--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "is-svg": "^4.3.1",
     "nuxt": "^2.15.3",
     "performant-array-to-tree": "^1.9.0",
+    "screenlog": "^0.3.0",
     "v-emoji-picker": "^2.3.3",
     "vue-json-viewer": "^2.2.19"
   },
