--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "country-code-emoji": "^2.3.0",
     "is-svg": "^4.3.1",
     "nuxt": "^2.15.3",
     "performant-array-to-tree": "^1.9.0",
