--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "performant-array-to-tree": "^1.9.0",
     "screenlog": "^0.3.0",
     "v-emoji-picker": "^2.3.3",
+    "vis-network": "^9.0.4",
     "vue-json-viewer": "^2.2.19"
   },
   "devDependencies": {
