--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "deploy":"push-dir --dir=dist --branch=gh-pages --clearnup"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
@@ -43,6 +44,7 @@
     "jest": "^26.6.3",
     "postcss": "^8.3.0",
     "prettier": "^2.2.1",
+    "push-dir": "^0.4.1",
     "tailwindcss": "^2.1.2",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
