--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "test": "jest",
-    "deploy":"push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
@@ -41,6 +41,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "gh-pages": "^3.2.0",
     "jest": "^26.6.3",
     "postcss": "^8.3.0",
     "prettier": "^2.2.1",
